 _____________________________________________________________________________
 
   Version 1.5.7
 _____________________________________________________________________________

 - Bug fixes:
   - Fixed an error that happened in certain cases when trying to change a
     single-word name on a pawn loaded from a preset

 _____________________________________________________________________________
 
   Version 1.5.6
 _____________________________________________________________________________

 - Bug fixes:
   - When loading xenotypes from presets, genes are no longer regenerated
     for a xenotype randomly. This was causing some genes to be lost when
     loading a standard xenotype from a preset
   - Removing all apparel from a pawn no longer blocks you from then adding
     apparel back onto the pawn
   - Pawns that use single-word names no longer break when loading from preset
     and now are displayed properly in the name panel
   - Mutants can now be saved and loaded from presets
   - The favorite color option is hidden for pawns that should not have a
     favorite color

 _____________________________________________________________________________
 
   Version 1.5.5
 _____________________________________________________________________________

 - Bug fixes:
   - Fixed loading xenotypes from presets so that fur definitions no longer
     break pawn rendering in a way that pawns become invisible
   - Fixed the way that traits are refreshed to stop deleting traits before
     adding them back. This avoids a problem where genes associated with a
     trait were unexpectedly removed
   - Fixed loading xenotypes so that the correct gene is chosen between
     multiple genes for the same appearance type
   - Traits added by xenotypes are no longer deleted when randomizing traits
   - Traits added by xenotypes can no longer be deleted--to avoid the
     the associated gene from also being deleted
   - Suppressed traits can be deleted
