@@ -6,6 +6,9 @@
  - Bug fixes:
    - Fixed an error that happened in certain cases when trying to change a
      single-word name on a pawn loaded from a preset
+   - Fixed an error where implants that can be attached to a body part group
+     (instead of to a specific body part) were not being loaded correctly from
+     saved presets
 
  _____________________________________________________________________________
  
